--- a/edarivaalit.html
+++ b/edarivaalit.html
@@ -1,8 +1,37 @@
 <html>
-<h1>Amari Kaura</h1>
+<head>
+<title>Nykysuomalainen pakanapappi</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+<style type="text/css">
+@font-face {
+    font-family: "custom_font";
+    src: url(fonts/abaddon.TTF) format("truetype");
+}
+</style>
+
+</head>
+
+<body style="background:#1F1E1C;font-family: 'custom_font', Verdana, Tahoma;">
+
+<div style="overflow:auto; margin: auto;padding:30px;">
+<img src="images/LOGO.jpeg" width="100px;" height="100px;" style="float:left;"/>
+<h1 style="color:white;float:left;"> Nykysuomalainen pakanapappi </h1>
+</div>
+
+<div style="overflow:auto;">
+  <div style="margin-left:30px;color:white;float:left;"><a href="index.html"><h3 style="color:white;">NSPPI</h3></a></div>
+  <div style="margin-left:30px;float:left;"><a href="edarivaalit.html" style="color:white;"><h3>Edarivaalit</h3></a></div>
+</div>
 
 
-
-
+<div style="margin:30px">
+<img src="images/amari.JPG" width="70%"/>
+</br>
+<img src="images/NISTI2.JPG" width="70%" />
+</div>
 
 </html>
