--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
 
 </head>
 
-<body style="background:black;font-family: 'custom_font', Verdana, Tahoma;">
+<body style="background:#1F1E1C;font-family: 'custom_font', Verdana, Tahoma;">
 
 <div style="overflow:auto; margin: auto;padding:30px;">
 <img src="images/LOGO.jpeg" width="100px;" height="100px;" style="float:left;"/>
 <h1 style="color:white;float:left;"> Nykysuomalainen pakanapappi </h1>
 </div>
 
-<div style="margin-left:30px;"><a href="edarivaalit.html" style="color:white;"><h3>Edarivaalit</h3></a></div>
+<div style="overflow:auto;">
+  <div style="margin-left:30px;color:white;float:left;"><a href="index.html"><h3 style="color:white;">NSPPI</h3></a></div>
+  <div style="margin-left:30px;float:left;"><a href="edarivaalit.html" style="color:white;"><h3>Edarivaalit</h3></a></div>
+</div>
+
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:50%;height:50%;margin:30px;float:left;">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -53,7 +58,7 @@ Kuvat
  $('.carousel').carousel({
    interval: 10000
   });
- 
+
 var imagelist=[["nsppi.jpg", "Kuvaotsikko1"], ["nsppi2.jpg", "Kuvaotsikko2"]];
 
 function change_image(i){
