--- a/edarivaalit.html
+++ b/edarivaalit.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
 <title>Nykysuomalainen pakanapappi</title>
@@ -5,25 +6,19 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<style type="text/css">
-@font-face {
-    font-family: "custom_font";
-    src: url(fonts/abaddon.TTF) format("truetype");
-}
-</style>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/fi_FI/sdk.js#xfbml=1&version=v2.8&appId=610961729078656";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+<link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
 <body style="background:#1F1E1C;font-family: 'custom_font', Verdana, Tahoma;">
 <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "http://connect.facebook.net/fi_FI/sdk.js#xfbml=1&version=v2.8&appId=610961729078656";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 <div style="overflow:auto; margin: auto;padding:30px;">
 <img src="images/LOGO.jpeg" width="100px;" height="100px;" style="float:left;"/>
@@ -37,11 +32,18 @@
 
 
 <div style="margin:30px">
-<img src="images/amari.JPG" width="70%" style="margin-bottom:50px;"/>
+
+<div style="overflow:auto;">
+  <img src="images/amari.JPG" width="70%" style="margin-bottom:50px;float:left;margin-right:30px;"/>
+
+  <div class="fb-page" data-href="https://www.facebook.com/sitoutumatonvasemmisto/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/sitoutumatonvasemmisto/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/sitoutumatonvasemmisto/">Sitoutumaton vasemmisto</a></blockquote></div>
+
+</div>
 
 <img src="images/NISTI2.JPG" width="70%" />
 </div>
 
-<div class="fb-page" data-href="https://www.facebook.com/sitoutumatonvasemmisto/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/sitoutumatonvasemmisto/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/sitoutumatonvasemmisto/">Sitoutumaton vasemmisto</a></blockquote></div>
 
+
+</body>
 </html>
