--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<style type="text/css">
-@font-face {
-    font-family: "custom_font";
-    src: url(fonts/abaddon.TTF) format("truetype");
-}
-</style>
-
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body style="background:#1F1E1C;font-family: 'custom_font', Verdana, Tahoma;">
@@ -29,6 +22,8 @@
 
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:50%;height:50%;margin:30px;float:left;">
+  
+<h1 style="color:white;"> Coming soon! </h1>
   <!-- Indicators -->
   <ol class="carousel-indicators">
   </ol>
