--- a/edarivaalit.html
+++ b/edarivaalit.html
@@ -1,6 +1,7 @@
 
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nykysuomalainen pakanapappi</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -34,11 +35,12 @@
 <div style="margin:30px">
 
 <div style="overflow:auto;">
-  <img src="images/amari.JPG" width="70%" style="margin-bottom:50px;float:left;margin-right:30px;"/>
+  <img src="images/amari.JPG" style="margin-bottom:50px;float:left;margin-right:30px;" class="amari_image"/>
 
-  <div class="fb-page" data-href="https://www.facebook.com/sitoutumatonvasemmisto/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/sitoutumatonvasemmisto/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/sitoutumatonvasemmisto/">Sitoutumaton vasemmisto</a></blockquote></div>
+  <div class="fb-page sitvas" data-href="https://www.facebook.com/sitoutumatonvasemmisto/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/sitoutumatonvasemmisto/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/sitoutumatonvasemmisto/">Sitoutumaton vasemmisto</a></blockquote></div>
+  </div>
+  </br>
 
-</div>
 
 <img src="images/NISTI2.JPG" width="70%" />
 </div>
